--- a/AppInstaller/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AppInstaller/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,12 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.samples.appinstaller.store.StoreFragment"
-        android:label="@string/title_home"
+        android:label="@string/title_store"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.samples.appinstaller.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
-
-    <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.samples.appinstaller.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:name="com.samples.appinstaller.app.AppFragment"
+        android:label="@string/title_apps"
+        tools:layout="@layout/fragment_library" />
 </navigation>
