--- a/AppInstaller/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/AppInstaller/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_store"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_store" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_library"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_apps" />
+        android:title="@string/title_library" />
 
 </menu>
