--- a/AppInstaller/app/src/main/res/layout/store_list_item.xml
+++ b/AppInstaller/app/src/main/res/layout/store_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:selectableItemBackground"
@@ -13,7 +14,7 @@
         android:layout_height="48dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:src="@drawable/ic_launcher_foreground" />
+        tools:src="@drawable/ic_launcher_foreground" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +29,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/content"
+                android:id="@+id/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="App name"
@@ -39,15 +40,15 @@
                 android:id="@+id/update_available"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:gravity="right"
+                android:layout_marginStart="20dp"
+                android:gravity="end"
                 android:text="&#9679; Update available"
                 android:textAlignment="gravity"
                 android:textColor="?attr/colorSecondary" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/subtitle"
+            android:id="@+id/company"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="App subtitle"
