--- a/AppInstaller/app/src/main/res/layout/fragment_store.xml
+++ b/AppInstaller/app/src/main/res/layout/fragment_store.xml
@@ -7,6 +7,7 @@
     tools:context=".store.StoreFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
