Add title & arguments support for navigation_app_details route

--- a/AppInstaller/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AppInstaller/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,6 +14,9 @@
             android:id="@+id/action_navigation_store_to_navigation_app_details"
             app:destination="@id/navigation_app_details">
             <argument
+                android:name="appName"
+                app:argType="string" />
+            <argument
                 android:name="packageId"
                 app:argType="string" />
         </action>
@@ -21,21 +24,33 @@
 
     <fragment
         android:id="@+id/navigation_library"
-        android:name="com.samples.appinstaller.app.AppDetailsFragment"
+        android:name="com.samples.appinstaller.library.LibraryFragment"
         android:label="@string/title_library"
-        tools:layout="@layout/fragment_library" >
+        tools:layout="@layout/fragment_library">
         <action
             android:id="@+id/action_navigation_library_to_navigation_app_details"
-            app:destination="@id/navigation_app_details" />
+            app:destination="@id/navigation_app_details">
+            <argument
+                android:name="appName"
+                app:argType="string" />
+            <argument
+                android:name="packageId"
+                app:argType="string" />
+        </action>
     </fragment>
 
     <fragment
         android:id="@+id/navigation_app_details"
         android:name="com.samples.appinstaller.app.AppDetailsFragment"
-        android:label="@string/title_app_details"
+        android:label="{appName}"
         tools:layout="@layout/fragment_app_details">
         <argument
+            android:name="appName"
+            app:argType="string"
+            android:defaultValue="Racing Pro" />
+        <argument
             android:name="packageId"
-            app:argType="string" />
+            app:argType="string"
+            android:defaultValue="com.example.game.racingpro" />
     </fragment>
 </navigation>
