Add basic settings screen

--- a/AppInstaller/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/AppInstaller/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,4 +11,9 @@
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_library" />
 
+
+    <item
+        android:id="@+id/navigation_settings"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:title="@string/title_settings" />
 </menu>
