--- a/AppInstaller/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AppInstaller/app/src/main/res/navigation/mobile_navigation.xml
@@ -53,4 +53,10 @@
             app:argType="string"
             android:defaultValue="com.example.game.racingpro" />
     </fragment>
+
+    <fragment
+        android:id="@+id/settings_library"
+        android:name="com.samples.appinstaller.settings.SettingsFragment"
+        android:label="@string/title_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
