--- a/AppInstaller/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AppInstaller/app/src/main/res/navigation/mobile_navigation.xml
@@ -55,7 +55,7 @@
     </fragment>
 
     <fragment
-        android:id="@+id/settings_library"
+        android:id="@+id/navigation_settings"
         android:name="com.samples.appinstaller.settings.SettingsFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
