--- a/AppInstaller/app/src/main/res/layout/fragment_settings.xml
+++ b/AppInstaller/app/src/main/res/layout/fragment_settings.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:lineSpacingMultiplier="1.5"
         android:textAppearance="?attr/textAppearanceBody2"
         android:text="@string/autoupdate_settings_description"/>
@@ -47,6 +47,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="30dp"
         tools:text="Updates available one minute after install"
         android:textAppearance="?attr/textAppearanceCaption"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/trigger_updates_check_label" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/trigger_app_upgrades_label" />
 </LinearLayout>
