--- a/AppInstaller/app/src/main/res/layout/fragment_app_details.xml
+++ b/AppInstaller/app/src/main/res/layout/fragment_app_details.xml
@@ -35,14 +35,14 @@
                 android:orientation="horizontal"
                 android:padding="8dp">
 
-                <!-- TODO: Fix ImageView mipmap, currently displaying grey background -->
                 <ImageView
                     android:id="@+id/icon"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:src="@{viewmodel.selectedApp.icon}" />
+                    mipmap="@{viewmodel.selectedApp.icon}"
+                    tools:src="@mipmap/ic_launcher"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
