--- a/AppInstaller/app/src/main/res/layout/fragment_app_details.xml
+++ b/AppInstaller/app/src/main/res/layout/fragment_app_details.xml
@@ -126,7 +126,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:indeterminate="true"
-                    android:visibility="@{(viewmodel.appStatus == AppStatus.DOWNLOADING) ? View.VISIBLE : View.GONE}" />
+                    android:visibility="@{(viewmodel.appStatus == AppStatus.DOWNLOADING || viewmodel.appStatus == AppStatus.INSTALLING) ? View.VISIBLE : View.GONE}" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
