--- a/AppInstaller/app/src/main/res/values/update_availability_period.xml
+++ b/AppInstaller/app/src/main/res/values/update_availability_period.xml
@@ -2,6 +2,8 @@
 <resources>
     <string-array name="update_availability_period">
         <item>No updates</item>
+        <item>After 30 seconds</item>
+        <item>After 5 minutes</item>
         <item>After 15 minutes</item>
         <item>After 30 minutes</item>
         <item>After 60 minutes</item>
