Fix deprecation warnings in layouts

--- a/AppInstaller/app/src/main/res/layout/fragment_app_details.xml
+++ b/AppInstaller/app/src/main/res/layout/fragment_app_details.xml
@@ -84,14 +84,14 @@
                     android:layout_height="wrap_content"
                     android:text="@string/request_permission_label"
                     android:visibility="@{viewmodel.appStatus == AppStatus.UNKNOWN ? View.VISIBLE : View.GONE}"
-                    android:onClick="@{permissionHandler.showRationale}"/>
+                    android:onClick="@{permissionHandler::showRationale}"/>
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/install_label"
                     android:visibility="@{viewmodel.appStatus == AppStatus.UNINSTALLED ? View.VISIBLE : View.GONE}"
-                    android:onClick="@{viewmodel.installApp}"/>
+                    android:onClick="@{viewmodel::installApp}"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -116,7 +116,7 @@
                         android:layout_weight="1"
                         android:enabled="false"
                         android:text="@string/open_app_install"
-                        android:onClick="@{viewmodel.openApp}" />
+                        android:onClick="@{viewmodel::openApp}" />
 
                 </LinearLayout>
 
@@ -139,7 +139,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/uninstall_label"
-                        android:onClick="@{viewmodel.uninstallApp}" />
+                        android:onClick="@{viewmodel::uninstallApp}" />
 
                     <Space
                         android:layout_width="20dp"
@@ -151,7 +151,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/open_app_install"
-                        android:onClick="@{viewmodel.openApp}" />
+                        android:onClick="@{viewmodel::openApp}" />
 
                 </LinearLayout>
             </LinearLayout>
