--- a/AppInstaller/app/src/main/res/layout/fragment_settings.xml
+++ b/AppInstaller/app/src/main/res/layout/fragment_settings.xml
@@ -86,12 +86,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/trigger_auto_updates_manually_label"
-            android:onClick="@{viewmodel.triggerAutoUpdating}"/>
-
-<!--        <Button-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="@string/trigger_new_updates_label"-->
-<!--            android:onClick="@{viewmodel.triggerAddingUpdates}" />-->
+            android:onClick="@{viewmodel::triggerAutoUpdating}"/>
     </LinearLayout>
 </layout>
