--- a/AppInstaller/app/src/main/res/layout/store_list_item.xml
+++ b/AppInstaller/app/src/main/res/layout/store_list_item.xml
@@ -32,9 +32,9 @@
                 android:id="@+id/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="App name"
                 android:textAppearance="?attr/textAppearanceListItem"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="App name" />
 
             <TextView
                 android:id="@+id/update_available"
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:gravity="end"
-                android:text="&#9679; Update available"
+                android:text="@string/update_available_status"
                 android:textAlignment="gravity"
                 android:textColor="?attr/colorSecondary" />
         </LinearLayout>
@@ -51,7 +51,7 @@
             android:id="@+id/company"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="App subtitle"
-            android:textAppearance="?attr/textAppearanceListItemSecondary" />
+            android:textAppearance="?attr/textAppearanceListItemSecondary"
+            tools:text="Company Inc" />
     </LinearLayout>
 </LinearLayout>
